<resources>
    <string name="app_name">LuckyNumber</string>
    <string name="please_enter_your_name_here">Please Enter Your Name Here</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_lucky_number_app">Welcome to Lucky Number App</string>
    <string name="here_is_your_lucky_number">Here is your Lucky Number</string>
    <string name="_00">00</string>
    <string name="share_my_lucky_number">Share My Lucky Number</string>
</resources>